2010-03-22  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs: Simplified by moving common code to
	a base class.
	* BrowserHttpWebRequestInternal.cs: Simplified by moving common 
	code to	a base class.
	* BrowserHttpWebResponse.cs: Simplified by moving common code to
	a base class.

	* ClientReflectionHelper.cs: New. Helper class to deal with
	reflection code.
	* ClientHttpWebRequest.cs: New. Client stack that reflect back to
	use the managed HttpWebRequest from System.dll
	* ClientHttpWebResponse.cs: New. Client stack that reflect back to
	use the managed HttpWebResponse from System.dll
	* ClientWebRequestCreate.cs: Start using the real client http 
	stack when asked to.

	* HttpWebAsyncResult.cs: Renamed from BrowserHttpWebAsyncResult.cs
	since it's being used by both stacks.
	* HttpWebRequestCore.cs: New. Base class for both stacks "real" 
	requests.
	* HttpWebResponseCore.cs: New. Base class for both stacks 
	responses.
	* PolicyBasedHttpWebRequest.cs: Base class for both http stacks
	that deals with policy and redirection.

	* README

2010-03-19  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs: Throw a SecurityException if the 
	request URI does not use HTTP[S]

2010-03-18  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs: Override both AllowWriteStreamBuffering,
	SupportsCookieContainer and UseDefaultCredentials (SL4 RC) new 
	properties. Fix restricted Cache-Control header (unit test).

2010-03-12  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest[Internal].cs: Remove 'progress' field. It
	is now defined as an internal in WebRequest (System.Net).

2010-03-11  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebAsyncResult.cs, BrowserHttpWebRequest[Internal].cs,
	BrowserHttpWebResponse.cs: Sources moved from System.Windows.Browser.dll

2010-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserWebRequestCreate.cs: Not for desktop assemblies.